--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome page</title>
+	<title>My Details</title>
 </head>
 <body>
 	<h3><a href="{{url_for('index')}}">Home</a>|<a href="{{url_for('register')}}">Register</a></h3>
-		<h1>Welcome to Galaxy Data Technologies</h1>
-
-		<p>My name is {{name}} and I am {{age}} years old.</p>
+<h1>Linkiniz Hazır: {{ first_name }}! </h1>
 </body>
 </html>
