--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
 	<h1>Register Your Details</h1>
 
 	<form method="POST" action="/register">
-		Link : <input type="text" name="first_name" required="" /><br /><br />
+		Link : <input type="text" name="url" required="" /><br /><br />
 		<input type="submit" name="submit" value="Register">
 	</form>
 
