--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h3><a href="{{url_for('index')}}">Home</a>|<a href="{{url_for('register')}}">Register</a></h3>
-<h1>Linkiniz Hazır: {{ first_name }}! </h1>
+<h1>Linkiniz Hazır: {{ cevap.json() }} </h1>
 </body>
 </html>
