--- a/templates/main.css
+++ b/templates/main.css
@@ -3,27 +3,11 @@ html,body {
 }
 
 body {
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-align: center;
         align-items: center;
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
+        margin-top: 50%;
+        background-color: #000000;
 }
 
-.form-signin {
-        width: 100%;
-        max-width: 330px;
-        padding: 15px;
-        margin: auto;
+.container{
+        margin-top: 50%;
 }
-
-.form-signin .form-control {
-        position: relative;
-        box-sizing: border-box;
-        height: auto;
-        padding: 10px;
-        font-size: 16px;
-}
- 
